# pratai-scheduler

./: .gitignore  README.rst  pylintrc  requirements.txt  setup.cfg  test-requirements.txt
etc/: pratai-scheduler.conf
pratai_scheduler/: cluster.py  collector.py  config.py  db.py  log.py  scheduler.py
pratai_scheduler/tests/unit/: test_cluster.py
