[metadata]
name = pratai-scheduler
version = 0.0.1
summary = OpenStack Function as a Service API Client Library
description-file =
    README.rst
license = Apache License, Version 2.0
author = Freezer Team
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Pratai
classifier =
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Virtualization :: Services
    Topic :: System :: Virtualization :: Functions
    Topic :: System :: Virtualization

keywords =
    pratai
    pratai-scheduler

[files]
packages =
    pratai_scheduler

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    pratai-scheduler = pratai_scheduler.shell:main

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true